--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,85 +1,105 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_detail"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    android:orientation="vertical"
     tools:context=".ui.detail.DetailActivity">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <ScrollView
         android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="16dp">
+
+            <ImageView
+                android:id="@+id/img_poster"
+                style="@style/DetailPoster"
+                android:contentDescription="@string/poster"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:src="@android:color/darker_gray" />
+
+            <TextView
+                android:id="@+id/tv_title"
+                style="@style/Text.Title.Detail"
+                android:layout_marginTop="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/img_poster"
+                tools:text="Title" />
+
+            <TextView
+                android:id="@+id/tv_release_date"
+                style="@style/Text.Description.Center"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tv_title"
+                tools:text="release date" />
+
+            <TextView
+                android:id="@+id/tv_genres"
+                style="@style/Text.Description.Center"
+                android:layout_marginTop="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tv_release_date"
+                tools:text="genres" />
+
+            <TextView
+                android:id="@+id/tv_vote_average"
+                style="@style/Text.Description.Center"
+                android:layout_marginTop="8dp"
+                android:drawablePadding="4dp"
+                app:drawableStartCompat="@drawable/ic_stars"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tv_genres"
+                tools:text="average vote" />
+
+
+            <TextView
+                android:id="@+id/header_overview"
+                style="@style/Text.Header"
+                android:layout_marginTop="8dp"
+                android:text="@string/overview"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tv_vote_average" />
+
+            <TextView
+                android:id="@+id/tv_overview"
+                style="@style/Text.Description"
+                android:layout_marginTop="8dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/header_overview"
+                tools:text="Lorem ipsum" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </ScrollView>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_favorite"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="16dp">
+        android:layout_gravity="bottom|end"
+        android:layout_margin="16dp"
+        android:contentDescription="@string/favorite"
+        app:fabSize="normal"
+        app:srcCompat="@drawable/ic_favorite_border" />
 
-        <ImageView
-            android:id="@+id/img_poster"
-            style="@style/DetailPoster"
-            android:contentDescription="@string/poster"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:src="@android:color/darker_gray" />
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
 
-        <TextView
-            android:id="@+id/tv_title"
-            style="@style/Text.Title.Detail"
-            android:layout_marginTop="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/img_poster"
-            tools:text="Title" />
-
-        <TextView
-            android:id="@+id/tv_release_date"
-            style="@style/Text.Description.Center"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_title"
-            tools:text="release date" />
-
-        <TextView
-            android:id="@+id/tv_genres"
-            style="@style/Text.Description.Center"
-            android:layout_marginTop="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_release_date"
-            tools:text="genres" />
-
-        <TextView
-            android:id="@+id/tv_vote_average"
-            style="@style/Text.Description.Center"
-            android:layout_marginTop="8dp"
-            android:drawablePadding="4dp"
-            app:drawableStartCompat="@drawable/ic_stars"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_genres"
-            tools:text="average vote" />
-
-
-        <TextView
-            android:id="@+id/header_overview"
-            style="@style/Text.Header"
-            android:layout_marginTop="8dp"
-            android:text="@string/overview"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_vote_average" />
-
-        <TextView
-            android:id="@+id/tv_overview"
-            style="@style/Text.Description"
-            android:layout_marginTop="8dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/header_overview"
-            tools:text="Lorem ipsum" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-</ScrollView>
 
 
 
